fixed secretsmanager link

--- a/console-services.yml
+++ b/console-services.yml
@@ -1897,7 +1897,7 @@
 - id: secretsmanager
   name: Secrets Manager
   description: Easily rotate, manage, and retrieve secrets throughout their lifecycle
-  url: "/secretsmanager/home#"
+  url: "/secretsmanager/home#!/listSecrets"
 
 - id: securityhub
   name: Security Hub
