--- a/console-services.yml
+++ b/console-services.yml
@@ -2373,7 +2373,7 @@
 - id: worklink
   name: WorkLink
   description: Enable secure mobile access to internal websites and web apps
-  url: "/worklink/home#"
+  url: "/worklink/home#/fleets"
 
 - id: workmail
   name: WorkMail
