fix: Update ElasticSearch link and add opensearch as a new term
The previous link doesn't work anymore. AWS also renamed elasticsearch to opensearch

--- a/console-services.yml
+++ b/console-services.yml
@@ -973,7 +973,8 @@
   description: Run and Scale Elasticsearch Clusters
   extra_search_terms:
     - elasticsearch
-  url: "/es/home#"
+    - opensearch
+  url: "/esv3/home#"
 
 - id: elastictranscoder
   name: Elastic Transcoder
