added buymeacoffee links

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 # These are supported funding model platforms
 
 patreon: rkoval_alfred_aws_console_services_workflow
+custom: https://www.buymeacoffee.com/nOklSpAEHE#support
