--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,3 +2,4 @@
 
 patreon: rkoval_alfred_aws_console_services_workflow
 custom: https://www.buymeacoffee.com/nOklSpAEHE
+custom: https://ryankoval.pizza
