added CloudShell service

--- a/console-services.yml
+++ b/console-services.yml
@@ -286,6 +286,11 @@
   description: Managed Search Service
   url: "/cloudsearch/home#"
 
+- id: cloudshell
+  name: CloudShell
+  description: Browser-based shell
+  url: /cloudshell
+
 - id: cloudtrail
   name: CloudTrail
   description: Track User Activity and API Usage
